--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="clock (1).png" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ramaraja&display=swap" rel="stylesheet">
@@ -19,7 +23,6 @@
     <div class="maindiv">
         <div class="subdiv">
             <div class="div1">
-                im
                 <h2> <span id="hours">00</span> <span>:</span> <span id="minutes2">00</span> <span>:</span> <span id="minutes">00</span> <span>:</span> <span id="seconds">00</span></h2>
             </div>
             <div class="button">
